--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "arbeid-situasjon",
   "version": "1.0.0",
   "homepage": "/arbeid/situasjon",
+  "license": "MIT",
   "scripts": {
     "start": "cross-env REACT_APP_DEV=true craco start",
     "build": "cross-env REACT_APP_MOCK=false craco build",
@@ -9,8 +10,6 @@
     "test": "craco test",
     "test:coverage": "npm test -- --coverage --watchAll=false",
     "eject": "craco eject",
-    "lint": "tslint ./src/**/*.ts*",
-    "lint:fix": "tslint ./src/**/**/**/**/*.ts* --fix",
     "prettier": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "eslintConfig": {
@@ -24,7 +23,6 @@
   "lint-staged": {
     "src/*.{ts,tsx}": [
       "prettier --write",
-      "tslint --fix",
       "git add"
     ]
   },
@@ -61,28 +59,25 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.11.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.4.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@craco/craco": "^5.6.3",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-router-dom": "^4.3.3",
+    "@craco/craco": "^5.6.4",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.3",
     "craco-less": "1.16.0",
     "cross-env": "^7.0.0",
     "enzyme": "^3.11.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
-    "prettier": "2.0.2",
+    "prettier": "^2.0.3",
     "serve": "^11.3.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.1.0",
     "yet-another-fetch-mock": "^3.4.0"
   }
 }
