--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   },
   "lint-staged": {
-    "src/*.{ts,tsx}": [
+    "src/*.{ts,tsx,less}": [
       "prettier --write",
       "git add"
     ]
@@ -60,7 +60,6 @@
     "query-string": "^6.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3"
   },
@@ -70,7 +69,6 @@
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
-    "@types/react-router-dom": "^5.1.3",
     "craco-less": "1.16.0",
     "cross-env": "^7.0.0",
     "enzyme": "^3.11.0",
