--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "nav-frontend-paneler-style": "^0.3.18",
     "nav-frontend-skjema": "^2.0.12",
     "nav-frontend-skjema-style": "^2.0.4",
+    "nav-frontend-spinner": "^2.0.2",
+    "nav-frontend-spinner-style": "^0.2.5",
     "nav-frontend-stegindikator": "^0.0.43",
     "nav-frontend-stegindikator-style": "^1.0.27",
     "nav-frontend-typografi": "^2.0.18",
