--- a/decorator.yaml
+++ b/decorator.yaml
@@ -2,7 +2,7 @@ contextPath: /arbeid/situasjon
 
 auth:
   enforce: true
-  loginUrl: {{ VEILARBSTEPUP_OIDC_URL }}
+  loginUrl: {{ LOGINSERVICE_URL }}
 
 proxy:
   - contextPath: "/arbeid/situasjon/veilarbvedtakinfo"
