--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: 12
       - name: Create image tag
-        run: echo ::set-env name=IMAGE::${IMAGE_NAME}:$(echo ${{ github.ref }} | cut -d '/' -f3).$(date '+%F-%H%M').$(echo $GITHUB_SHA | cut -c1-7) #eks pa tag  gh-actions.2020-01-08-1255.8fa4236
+        run: echo "IMAGE=${IMAGE_NAME}:$(echo ${{ github.ref }} | cut -d '/' -f3).$(date '+%F-%H%M').$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV #eks pa tag  gh-actions.2020-01-08-1255.8fa4236
       - run: npm ci
       - run: npm run test
       - run: npm run build
